#pragma once

namespace cycleopt {

struct Point3D {
    double x = 0.0;
    double y = 0.0;
    double z = 0.0;
};

}  // namespace cycleopt
